--- a/public/styles.css
+++ b/public/styles.css
@@ -1,17 +1,16 @@
 body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     background-image: url('background1.jpeg');
     font-family: 'Dancing Script', cursive;
 }
 .container {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 .headerContainer {
     display: flex;
-    /* justify-content: center; */
+    background-color: white;
     flex-direction: column;
-    /* background-color: #5995DA; */
 }
 .title {
     display: flex;
@@ -20,7 +19,6 @@ body {
 h1 {
 }
 .search {
-    /* display: flex; */
     margin: auto;
 }
 #searchBox {
@@ -30,14 +28,12 @@ h1 {
     margin: 5px;
 }
 .bodyContainer {
-    height: 31em;
+    height: 42em;
     margin-top: 45px;
-    background-color: #666599DA;
 }
 .inputContainer {
     display: flex;
     justify-content: center;
-    
 }
 form {
     
@@ -57,7 +53,6 @@ form {
     flex-wrap: wrap;
     align-content: center;
     margin-top: 50px;
-    
 }
 .header {
     margin: 10px;
@@ -70,13 +65,11 @@ form {
     margin-top: 50px;
 }
 #footer {
-    height: 15em;
     margin-bottom: 0em;
 }
 .footerContainer {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-content: center;
     margin: auto;
 }
